# LearningRust

./: README.md
CodingExercises/: README.md
CodingExercises/Beginner/BasicMath/: Basicmath.md  Cargo.toml
CodingExercises/Beginner/ControlFlow/: ControlFlow.md
CodingExercises/Beginner/ControlFlow/src/: main.rs
CodingExercises/Beginner/loops_and_iterators/: Cargo.toml
CodingExercises/Beginner/loops_and_iterators/src/: main.rs
Projects/: README.md
Projects/Project1-Todo_App/: Cargo.toml  tasks.json
Projects/Project1-Todo_App/src/: main.rs  tasks.rs
