[package]
name = "Project1-Todo_App"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }  # For data serialization
serde_json = "1.0"  # Store tasks in JSON
structopt = "0.3"  # For parsing CLI arguments
